--- a/task3.html
+++ b/task3.html
@@ -2,16 +2,14 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Искусственный Интеллект: Понимаем основы</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-
     <div class="top-bar">
         <a href="#top" class="logo">Искусственный интеллект</a>
-            <nav class="menu" aria-label="Основное меню">
+        <nav class="menu" aria-label="Основное меню">
             <a href="#definition">Что это такое</a>
             <a href="#applications">Где применяется</a>
             <a href="#how-it-works">Как работает</a>
@@ -25,7 +23,7 @@
         <a 
             href="https://ru.wikipedia.org/wiki/Искусственный_интеллект" 
             class="read-more-btn" 
-            target="_blank" 
+            target="_blank"
             rel="noopener noreferrer"
             aria-label="Читать подробнее об искусственном интеллекте на внешнем сайте"
         >
@@ -123,3 +121,8 @@
             <a href="#definition"> Что это такое</a>
             <a href="#applications">Где применяется</a>
             <a href="#how-it-works">Как работает</a>
+        </div>
+    </footer>
+
+</body>
+</html>
